# harpia

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  ExampleProject.md  HowToUse.md  README.md  domotics.proto  harpia.architecture.md  harpia.process.md  harpia.proto  harpia.requisits.md  main.py  pytest.ini  requirements.txt  snipet.py  test.harpia
Assets/: CMakeLists.txt
Assets/client_http_example/: CMakeLists.txt  httpTemplateDefinition.md  main.cpp
Assets/client_template/: CMakeLists.txt
Assets/client_template/src/: client_template.cpp  main.cpp
Assets/external_libs/: httplib.h
Assets/proto/: CMakeLists.txt
Assets/proto/protofiles/: Service.proto  common.h  errorCode.proto  heartBeat.proto
Assets/server_http_example/: CMakeLists.txt  httpTemplateDefinition.md  main.cpp  templated.cpp
Assets/server_template/: CMakeLists.txt
Assets/server_template/src/: main.cpp  server_template.cpp  server_template.h
Database/: CrudlAdapter.py  DbIoAdapter.py  RestAdapter.py  SoapAdapter.py  SqlAdapter.py  model.py
Database/templates/: crudl.h.tmpl  dbio.h.tmpl  rest.h.tmpl  soap.h.tmpl  table.sql.tmpl
Errors/: Error.py
HarpiaTest/: test.harpia
HarpiaTest/Include/: file1.harpia  file2.harpia  file3.harpia  file4.harpia
JsonAdapter/: JsonAdapter.py
JsonAdapter/templates/: adapter.h.tmpl
LexicalAnalizer/: CommentRemover.py  LexicalAnalyzer.py  MessageCreator.py  Remover.py  lex.py  pre_lex.py
Message/: EnumValues.py  Variables.py
Message/assets/: message_footer.hxx  message_test.cxx
ProtoFile/: FileCreator.py  GrpcCompiler.py  ProtoCompiler.py  ProtoFileProcessor.py
Test/: ExampleProject.md  harpia.architecture.md  test.harpia
Test/Include/: file1.harpia  file2.harpia  file3.harpia
Test/TestProto/: addressbook.proto  person.proto
TestAdapter/: TestAdapter.py
TestAdapter/templates/: app.cpp.tmpl  test.cpp.tmpl
TestProject/: CMakeLists.txt  Example.md  ExampleProject.md  Requisits.md  harpia.proto
Util/: util.py
XmlAdapter/: XmlAdapter.py
XmlAdapter/runtime/: harpia_xml.h
XmlAdapter/templates/: wrapper.h.tmpl
ZmqAdapter/: ZmqAdapter.py
ZmqAdapter/templates/: header.h.tmpl  receiver.tmpl  sender.tmpl
docker/: run.sh
lib/interpreter/messages/: template.proto
logger/: logger.py
message/: EnumValues.py  Message.py  Variables.py
message/assets/: message_footer.hxx  message_header.hxx  message_src_header.cxx  message_test.cxx
protoFile/: FileCreator.py  ProtoFileProcessor.py
scracth/: snipet.py
scracth/src/: CMakeLists.txt  main.cpp  main.h
scracth/src/module_example/: module_example.hpp
scratch/: cli commands
src/: CMakeLists.txt  main.h
src/module_example/: module_example.hpp
tests/: README.md  run_frontend.py  run_pipeline.py  test_demo.py  test_frontend.py  test_golden.py  test_stage10_xml.py  test_stage11_soap.py  test_stage12_rest.py  test_stage13.py  test_stage13_zmq.py  test_stage14.py  test_stage7.py  test_stage8_db.py  test_stage9.py
tests/golden/: messages.txt  tokens.txt
tests/golden/db/: data_734126ee6efdfbd64a1678bf49ee9683_crudl.h  top_users_734126ee6efdfbd64a1678bf49ee9683_crudl.h  users_734126ee6efdfbd64a1678bf49ee9683_crudl.h  vip_users_734126ee6efdfbd64a1678bf49ee9683_crudl.h
tests/golden/dbio/: data_734126ee6efdfbd64a1678bf49ee9683_dbio.h  top_users_734126ee6efdfbd64a1678bf49ee9683_dbio.h  users_734126ee6efdfbd64a1678bf49ee9683_dbio.h  vip_users_734126ee6efdfbd64a1678bf49ee9683_dbio.h
tests/golden/gen_tests/: CMakeLists.txt  app_734126ee6efdfbd64a1678bf49ee9683_test.cpp  data_734126ee6efdfbd64a1678bf49ee9683_test.cpp  top_users_734126ee6efdfbd64a1678bf49ee9683_test.cpp  users_734126ee6efdfbd64a1678bf49ee9683_test.cpp  vip_users_734126ee6efdfbd64a1678bf49ee9683_test.cpp
tests/golden/json/: another_sage_734126ee6efdfbd64a1678bf49ee9683_json.h  data_734126ee6efdfbd64a1678bf49ee9683_json.h  king_734126ee6efdfbd64a1678bf49ee9683_json.h  pope_734126ee6efdfbd64a1678bf49ee9683_json.h  prince_734126ee6efdfbd64a1678bf49ee9683_json.h  queen_734126ee6efdfbd64a1678bf49ee9683_json.h  top_users_734126ee6efdfbd64a1678bf49ee9683_json.h  users_734126ee6efdfbd64a1678bf49ee9683_json.h  vip_users_734126ee6efdfbd64a1678bf49ee9683_json.h
tests/golden/proto/: another_sage_734126ee6efdfbd64a1678bf49ee9683.proto  another_sage_734126ee6efdfbd64a1678bf49ee9683_service.proto  baba_734126ee6efdfbd64a1678bf49ee9683.proto  baba_734126ee6efdfbd64a1678bf49ee9683_service.proto  data_734126ee6efdfbd64a1678bf49ee9683.proto  data_734126ee6efdfbd64a1678bf49ee9683_service.proto  grow_734126ee6efdfbd64a1678bf49ee9683.proto  grow_734126ee6efdfbd64a1678bf49ee9683_service.proto  king_734126ee6efdfbd64a1678bf49ee9683.proto  (+15 more)
util/: util.py
(+58 files in other folders)
